# deko

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.py
bindings/c++/: CMakeLists.txt
bindings/c++/include/quasar/deko/: decoder.h  deko.h  ffi_p.h
bindings/c++/src/c++/: abi.h  decoder.c++  deko.c++  utl.h
src/: lib.rs  log.rs
src/config/: config.rs  config_instance.rs  config_struct.rs  decoder_config.rs  general_config.rs  instance.rs  mod.rs
src/datagrams/: jpeg.rs  mod.rs
src/datagrams/jpeg/: datagram.rs  decode.rs  mod.rs
src/decoder/: image_shape.rs  image_type.rs  jpeg_decoder.rs  mod.rs  utility_extensions.rs
src/decoder/image/: imageops.rs  info.rs  mod.rs
src/decoder/image/metadata/: jpeg_metadata.rs  mod.rs
src/ffi/: decoder.rs  mod.rs  utils.rs
src/image/: formats.rs  mod.rs  static_image.rs  trait_from_file.rs
src/utils/: checksum.rs  logger.rs  mercator.rs  mod.rs  size.rs  validate.rs
test_data/: m1-24-12-2023_08-54-00.json
testdata/: m1-24-12-2023_08-50-48.json  m1-24-12-2023_08-52-13.json
testdata/cfg/: cfg-deko.yaml  cfg-deko.yml
