[package]
name = "deko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deko_cli"
path = "src/bin/deko_cli/main.rs"

[dependencies]
serde = "1.0.193"
serde_derive = "1.0.193"
serde_yaml = "0.9.29"
anyhow = "1.0.78"
lazy_static = "1.4.0"
colored = "2.1.0"
endian_codec = "0.1.1"
endian_codec_derive = "0.1.1"
bincode = "2.0.0-rc.3"