[package]
name = "deko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deko_cli"
path = "src/bin/deko_cli/main.rs"

[dependencies]
anyhow = "1.0.78"
lazy_static = "1.4.0"
log = "0.4.20"
flexi_logger = "0.27.3"
colored = "2.1.0"
regex = "1.10.2"
chrono = "0.4.31"

serde = "1.0.193"
serde_derive = "1.0.193"
# serde_yaml = "0.9.29"
serde_json = "1.0.110"

endian_codec = "0.1.1"
endian_codec_derive = "0.1.1"
bincode = "2.0.0-rc.3"

imageproc = "0.23.0"
image = "0.24.5"
